# agent-core-infra

./: ARQUITECTURA.md  PROJECT_INSTRUCTIONS.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.semgrep/: security.yml
lib/agents/: __init__.py  base_agent.py  retry.py  state.py  streaming.py
lib/ai/: __init__.py  openai_client.py
lib/db/: __init__.py  supabase_client.py
lib/email/: __init__.py  queue_worker.py  resend_client.py  sequences.py  validation.py
lib/email/templates/: confirmation.html  delivery.html  nurture_1.html  upsell.html
lib/health/: __init__.py  checker.py
lib/payments/: __init__.py  base.py  factory.py  lemon_squeezy.py
lib/pdf/: __init__.py  generator.py
lib/pdf/styles/: base.css
lib/pdf/templates/: base.html  document.html  report.html
lib/storage/: __init__.py  r2_client.py  supabase_storage.py
tests/: test_email_sequences.py  test_smoke.py
